--- a/Source/ED-LaserDrill/ED-LaserDrill.csproj
+++ b/Source/ED-LaserDrill/ED-LaserDrill.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{3BA81339-B51E-41B8-82F5-A8BC2F3CBD8F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ED_LaserDrill</RootNamespace>
+    <RootNamespace>EnhancedDevelopment.LaserDrill</RootNamespace>
     <AssemblyName>ED-LaserDrill</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -16,7 +16,7 @@
     <DebugSymbols>false</DebugSymbols>
     <DebugType>none</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\Assemblies\</OutputPath>
+    <OutputPath>..\..\ED-LaserDrill\Assemblies\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -31,8 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Assembly-CSharp">
-      <HintPath>..\..\..\..\lib\A13.1135\Assembly-CSharp.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\..\..\lib\A14.1234\Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -41,8 +40,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="UnityEngine">
-      <HintPath>..\..\..\..\lib\A13.1135\UnityEngine.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\..\..\lib\A14.1234\UnityEngine.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
