--- a/Source/ED-LaserDrill/ED-LaserDrill.csproj
+++ b/Source/ED-LaserDrill/ED-LaserDrill.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="LaserDrill\Building_LaserDrill.cs" />
     <Compile Include="LaserDrill\Building_LaserFiller.cs" />
+    <Compile Include="MapComp_LaserDrill.cs" />
     <Compile Include="Settings\Mod_LaserDrill.cs" />
     <Compile Include="Settings\ModSettings_LaserDrill.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
