--- a/Source/ED-LaserDrill/ED-LaserDrill.csproj
+++ b/Source/ED-LaserDrill/ED-LaserDrill.csproj
@@ -50,7 +50,7 @@
     <Compile Include="Comps\Comp_LaserDrill.cs" />
     <Compile Include="LaserDrill\Building_LaserDrill.cs" />
     <Compile Include="LaserDrill\Building_LaserFiller.cs" />
-    <Compile Include="Settings\MapComp_LaserDrill.cs" />
+    <Compile Include="MapComp_LaserDrill.cs" />
     <Compile Include="Settings\Mod_LaserDrill.cs" />
     <Compile Include="Settings\ModSettings_LaserDrill.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
