--- a/Source/ED-LaserDrill/ED-LaserDrill.csproj
+++ b/Source/ED-LaserDrill/ED-LaserDrill.csproj
@@ -31,7 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Assembly-CSharp">
-      <HintPath>..\..\..\Jaxxa-Rimworld\RW-DLL\B19\2009-x64\Assembly-CSharp.dll</HintPath>
+      <HintPath>..\..\..\..\RW-DLL\1.0\2059\Assembly-CSharp.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
@@ -41,7 +41,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="UnityEngine">
-      <HintPath>..\..\..\Jaxxa-Rimworld\RW-DLL\B19\2009-x64\UnityEngine.dll</HintPath>
+      <HintPath>..\..\..\..\RW-DLL\1.0\2059\UnityEngine.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
@@ -51,6 +51,9 @@
     <Compile Include="Settings\Mod_LaserDrill.cs" />
     <Compile Include="Settings\ModSettings_LaserDrill.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
