--- a/Source/1.0/ED-LaserDrill_1.0.csproj
+++ b/Source/1.0/ED-LaserDrill_1.0.csproj
@@ -16,7 +16,7 @@
     <DebugSymbols>false</DebugSymbols>
     <DebugType>none</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\ED-LaserDrill\Assemblies\</OutputPath>
+    <OutputPath>..\..\ED-LaserDrill\1.0\Assemblies\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -24,14 +24,14 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\..\ED-LaserDrill\Assemblies\</OutputPath>
+    <OutputPath>..\..\ED-LaserDrill\1.0\Assemblies\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Assembly-CSharp">
-      <HintPath>..\..\..\..\RW-DLL\1.0\2059\Assembly-CSharp.dll</HintPath>
+      <HintPath>..\..\..\..\RW-DLL\1.0\2408\Assembly-CSharp.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
@@ -41,7 +41,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="UnityEngine">
-      <HintPath>..\..\..\..\RW-DLL\1.0\2059\UnityEngine.dll</HintPath>
+      <HintPath>..\..\..\..\RW-DLL\1.0\2408\UnityEngine.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
