--- a/Source/1.1/ED-LaserDrill_1.1.csproj
+++ b/Source/1.1/ED-LaserDrill_1.1.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{37F117C5-A529-4B41-8768-33ADED0DDD85}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EnhancedDevelopment.LaserDrill</RootNamespace>
+    <RootNamespace>Jaxxa.EnhancedDevelopment.LaserDrill</RootNamespace>
     <AssemblyName>ED-LaserDrill</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -33,6 +33,10 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="0ED-Core">
+      <HintPath>..\..\..\ED-Core\ED-Core\1.1\Assemblies\0ED-Core.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="Assembly-CSharp">
       <HintPath>..\..\..\..\RW-DLL\1.1\Assembly-CSharp.dll</HintPath>
       <Private>False</Private>
@@ -61,9 +65,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LaserDrill\LaserDrillVisual.cs" />
-    <Compile Include="LaserDrill\CompProperties_LaserDrill.cs" />
-    <Compile Include="LaserDrill\Comp_LaserDrill.cs" />
+    <Compile Include="Comps\CompProperties_LaserDrillRequiresPower.cs" />
+    <Compile Include="Comps\Comp_LaserDrillRequiresPower.cs" />
+    <Compile Include="Things\LaserDrillVisual.cs" />
+    <Compile Include="Comps\CompProperties_LaserDrill.cs" />
+    <Compile Include="Comps\Comp_LaserDrill.cs" />
     <Compile Include="Settings\Mod_LaserDrill.cs" />
     <Compile Include="Settings\ModSettings_LaserDrill.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
