--- a/Source/1.1/ED-LaserDrill_1.1.csproj
+++ b/Source/1.1/ED-LaserDrill_1.1.csproj
@@ -67,6 +67,7 @@
   <ItemGroup>
     <Compile Include="Comps\CompProperties_LaserDrillRequiresPower.cs" />
     <Compile Include="Comps\Comp_LaserDrillRequiresPower.cs" />
+    <Compile Include="Comps\LaserDrillMapComp.cs" />
     <Compile Include="Things\LaserDrillVisual.cs" />
     <Compile Include="Comps\CompProperties_LaserDrill.cs" />
     <Compile Include="Comps\Comp_LaserDrill.cs" />
